[package]
name = "multipart"
version = "0.18.0"

[dependencies]
lazy_static = { version = "1.2.0", optional = true }
log = "0.4"
mime = "0.3.14"
mime_guess = "2.0.1"
rand = "0.8"
safemem = { version = "0.3", optional = true }
tempfile = "3"


#Server Dependencies
buf_redux = { version = "0.8", optional = true, default-features = false }
httparse = { version = "1.2", optional = true }
twoway = { version = "0.2.2", optional = true }
quick-error = { version = "2.0.1", optional = true }

# Optional Integrations
tiny_http = { version = ">=0.6, <=0.12.0", optional = true }

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = ["server","tiny_http"]
server = ["buf_redux", "httparse", "quick-error", "safemem", "twoway"]

